// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders Disabled Input correctly 1`] = `
<div>
  <div
    class="ui-input-box disabled shape-radius"
  >
    <input
      class="ui-input"
      disabled=""
      type="text"
    />
  </div>
</div>
`;

exports[`Input renders Input with radius correctly 1`] = `
<div>
  <div
    class="ui-input-box shape-radius"
  >
    <input
      class="ui-input"
      placeholder="请输入"
      type="text"
    />
  </div>
</div>
`;

exports[`Input renders correctly with initial value 1`] = `
<div>
  <Input
    onChange={[MockFunction]}
    prefixCls="ui-input"
    shape="radius"
    size={null}
    type="text"
    value="hey"
  />
</div>
`;

exports[`Input renders different sizes of Input correctly 1`] = `
<div>
  <div
    class="ui-input-box shape-radius size-xl"
  >
    <input
      class="ui-input"
      placeholder="请输入"
      type="text"
    />
  </div>
  <div
    class="ui-input-box shape-radius size-lg"
  >
    <input
      class="ui-input"
      placeholder="请输入"
      type="text"
    />
  </div>
  <div
    class="ui-input-box shape-radius size-sm"
  >
    <input
      class="ui-input"
      placeholder="请输入"
      type="text"
    />
  </div>
  <div
    class="ui-input-box shape-radius size-xs"
  >
    <input
      class="ui-input"
      placeholder="请输入"
      type="text"
    />
  </div>
</div>
`;

exports[`Input renders different types of Input correctly 1`] = `
<div>
  <div
    class="ui-input-box shape-radius"
  >
    <input
      class="ui-input"
      placeholder="请输入"
      type="text"
    />
  </div>
  <span
    class="ui-input-textarea-box"
  >
    <textarea
      class="ui-input-box shape-radius"
      placeholder="请输入"
    />
  </span>
</div>
`;
